src/tests/fixtures/resolver_context/ContextValueTypeNotDefined.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType */
export class Query {
  /** @gqlField */
  greeting(args: never, ctx: ThisIsNeverDefined): string {
    return ctx.greeting;
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/resolver_context/ContextValueTypeNotDefined.ts:4:30 - error: Unable to locate the declaration of the context parameter's type. Grats validates that your context parameter is type-safe by checking all context values reference the same type declaration. Did you forget to import or define this type?

4   greeting(args: never, ctx: ThisIsNeverDefined): string {
                               ~~~~~~~~~~~~~~~~~~
